--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -571,7 +571,7 @@ eq.~\ref{eq:fourier}, we can thus write
 
 \begin{equation}
 P(\mathbf{r},t)=\frac{1}{\sqrt{4\pi t^{3}\mid\mathbf{D}\mid}}exp(-\frac{\mathbf{r}^{T}\mathbf{D}^{-1}\mathbf{r}}{4t})
-end{equation}
+\end{equation}
 \noindent where $\mathbf{D}$ is known as the diffusion tensor. This tensor is a
 $3x3$ positive definite symmetric matrix that can be completely described by a
 centered ellipsoid with 3 principal axes and associated eigenvalues
