--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -127,21 +127,21 @@ emphstyle={\color{self}\slshape},
 
 Diffusion Imaging in Python (Dipy) is a free and open source software project
 for the analysis of data from diffusion magnetic resonance imaging (dMRI)
-experiments. DMRI is an application of MRI that can be used to measure 
+experiments. DMRI is an application of MRI that can be used to measure
 microstructural features as well as the white matter wiring of the
-human brain \emph{in vivo}. It  
+human brain \emph{in vivo}. It
 utilizes pulsed directionally oriented magnetic gradients to
 non-invasively measure the diffusion signal in different directions
-and locations in the brain. Many methods 
+and locations in the brain. Many methods
 have been developed to model the local configuration of white matter
-bundles based on this information and to infer the trajectory of  
+bundles based on this information and to infer the trajectory of
 fascicles connecting different parts of the brain.
 
 Dipy gathers implementations of many different methods, from diffusion
 signal pre-processing, to local reconstruction techniques, to fiber
-tractography and fiber post-processing, analysis and visualization. 
+tractography and fiber post-processing, analysis and visualization.
 All the Dipy methods can be easily understood and compared as Dipy aims to
-provide transparent 
+provide transparent
 implementations for all the different steps of dMRI analysis with a uniform
 API. We have implemented classical signal reconstruction techniques, such as
 the diffusion tensor model and deterministic fiber tractography. In addition,
@@ -155,7 +155,7 @@ to assist in the development and use of novel techniques.
 In contrast to many other scientific software projects, Dipy is not being
 developed by a single research group. Rather, it is an open project that
 encourages contributions from any scientist/developer through the
-\emph{github Pull 
+\emph{github Pull
 Request} mechanism and open discussions on github and on the project mailing
 list. Consequently, dipy today has an international team of contributors,
 spanning 6 different academic institutions in 4 countries and 3 continents,
@@ -163,7 +163,7 @@ which is still growing (http://dipy.org).
 
 \section{Keywords:} Python, Free Open Source Software, Medical
 Imaging, Medical Visualization, Diffusion MRI, Diffusion Tensor,
-Spherical Deconvolution, Fiber Tracking, Deterministic Tractography, 
+Spherical Deconvolution, Fiber Tracking, Deterministic Tractography,
 Probabilistic Tractography, Clustering.
 
 \end{abstract}
@@ -171,7 +171,7 @@ Probabilistic Tractography, Clustering.
 \section{Introduction}
 
 \emph{Diffusion MRI} (dMRI) \citep{merboldt-hanicke-etal:85,
-  lebihan-breton:85, taylor-bushell:85}  
+  lebihan-breton:85, taylor-bushell:85}
 is a MRI technique \citep{callaghan:91} that provides information
 about the structure of neuronal pathways found in the white matter and
 other body tissue with fiber-like structure. DMRI acquires one or more
@@ -246,7 +246,7 @@ analysis. Matplotlib\footnote{\url{http://matplotlib.org}} is used for 2D and
 more advanced 3D interactive visualization. Furthermore, nose
 \footnote{\url{http://nose.readthedocs.org/}} is used for unit
 testing and sphinx \footnote{\url{http://sphinx-doc.org/}} for automated
-documentation. Finally, we recommend using 
+documentation. Finally, we recommend using
 IPython\footnote{\url{http://ipython.org}} the interactive Python shell for
 calling and debugging scripts.
 
@@ -254,7 +254,7 @@ In the following sections, we will explain the philosophy and main design
 concepts behind Dipy. We will also give examples which cover different parts of
 the diffusion MR analysis pipeline from the local voxel reconstruction of
 orientation distribution functions (ODFs) to streamline generation by
-tractograph algorithms and visualization of these streamlines. 
+tractograph algorithms and visualization of these streamlines.
 
 \section{Philosophy and Mission}
 
@@ -309,11 +309,11 @@ scale. Typically, the measurement is conducted in a grid of \emph{"voxels"} of
 approximately 2x2x2 mm. We are therefore limited to describe the trajectories
 of \emph{"fascicles"} of nerves. One of the major achievements of this
 field is that it is now possible to reliably and accurately identify
-major fascicles in 
+major fascicles in
 individual experimental participants or patients. These major fascicles are
 also known as \emph{"tracts"}. This is a term taken from neuroanatomy
 and describes a group of neuronal axons within the central nervous
-system (mm scale). 
+system (mm scale).
 
 For the purpose of interpretation of these data, a \emph{"fiber"} can be any long and
 thin structure. Hence, fiber tracking is a general term that can be used in any
@@ -342,8 +342,8 @@ are not to be confused with tracts: While a tract is a physical object, a track
 is a computational construct that only approximates the underlying fascicle or
 bundle of fibers. Confusingly enough "streamline bundles", or simply "bundles"
 are often used to refer to a group of streamlines with similar shape and
-spatial characteristics (see \ref{quickbundles}). These do not necessarily 
-correspond to individual physical fiber bundles but are instead computational 
+spatial characteristics (see \ref{quickbundles}). These do not necessarily
+correspond to individual physical fiber bundles but are instead computational
 constructs that approximate the underlying anatomy.
 
 \section{General design aspects}
@@ -381,15 +381,15 @@ as input and converts it to either HTML, LaTeX or PDF formats.  API
 documentation is extracted directly from the docstrings in the source code, so
 that it is never outdated.
 
-Dipy's main sub-modules (see Fig.~\ref{Fig:module_structure}) are \emph{core}, 
-\emph{reconst, tracking, viz, io, align, data, sims} and \emph{segment}. 
-\emph{Core} contains general functions that can be used in any other sub-module. 
-\emph{Reconst} contains classes for voxel-based reconstruction. \emph{Tracking} 
+Dipy's main sub-modules (see Fig.~\ref{Fig:module_structure}) are \emph{core},
+\emph{reconst, tracking, viz, io, align, data, sims} and \emph{segment}.
+\emph{Core} contains general functions that can be used in any other sub-module.
+\emph{Reconst} contains classes for voxel-based reconstruction. \emph{Tracking}
 holds classes for fiber tracking and streamline processing. \emph{Viz} is used
  for 3D vizualization and interaction. \emph{Io} offers input/output utilities
-when they are not available in Nibabel. \emph{Align} provides tools for 
-alignment and reslicing of volumes or streamlines. \emph{Sims} is focused on 
-creating synthetic simulations. \emph{Data} is used for downloading public 
+when they are not available in Nibabel. \emph{Align} provides tools for
+alignment and reslicing of volumes or streamlines. \emph{Sims} is focused on
+creating synthetic simulations. \emph{Data} is used for downloading public
 datasets. \emph{Segment} concentrates on segmentation of images and clustering
 of streamlines.
 
@@ -400,8 +400,8 @@ of streamlines.
 on Numpy, Scipy and Cython. This diagram further shows the major Dipy sub-modules.\label{Fig:module_structure}}
 \end{figure}
 
-In this paper we will use code listings to illustrate the use of Dipy. For 
-example, the following code snippet shows how to find your current version of 
+In this paper we will use code listings to illustrate the use of Dipy. For
+example, the following code snippet shows how to find your current version of
 Dipy.
 \begin{python}
 import dipy
@@ -474,17 +474,23 @@ nib.save(sub_img, "sub_data.nii.gz")
 
 \subsection{Background removal}
 In order to remove the background and keep only the parts that are in the brain
-we can use a function called \texttt{median\_otsu}.
+we can use a function called \texttt{median\_otsu} (see Fig.~\ref{Fig:brain_segmentation}).
 \begin{python}
 from dipy.segment.mask import median_otsu
 mask, S0_mask = median_otsu(data[:, :, :, 0])
 \end{python}
-\texttt{median\_otsu} uses first a median filter to smooth the \texttt{S0} and 
+\texttt{median\_otsu} uses first a median filter to smooth the \texttt{S0} and
 then otsu, an automated histogram method \cite{Otsu1979} to separate the brain
 (foreground) from its background. It returns two arrays, the \texttt{mask}, a
 3D array with 1s at the foreground and 0s in the background and the masked
 \texttt{S0}, \texttt{S0\_mask} a 3D array whith the actual \texttt{S0} values in
 the foreground and 0s in the background.
+
+\begin{figure}
+\includegraphics[scale=0.55]{Figures/brain_segmentation.eps}
+\centering{}
+\caption{Showing the middle slice of \texttt{S0} before (left) and after brain extraction (right) using \texttt{median\_otsu}. \label{Fig:brain_segmentation}}
+\end{figure}
 
 \subsection{Gradient Table}\label{gtab}
 The b-value $b$ or \emph{diffusion weighting} is a function of the amplitude,
@@ -541,7 +547,7 @@ exactly where it will be after time $t$, we can only model a distribution of
 possible locations i.e. a probability displacement distribution. This is also
 known as the diffusion propagator $P$. This motion is described by the
 propagator $P(\mathbf{x};\mathbf{x}_{0},t)$ which defines the probability of
-being in $\mathbf{x}$ after a time $t$, starting at $\mathbf{x}_{0}$. Callaghan 
+being in $\mathbf{x}$ after a time $t$, starting at $\mathbf{x}_{0}$. Callaghan
 \citep{callaghan:91} showed that the spin echo magnitude
 $S(\mathbf{q},t)$ from a pulsed gradient spin echo (PGSE) experiment is
 directly related to the diffusion propagator by the following (inverse) Fourier
@@ -560,18 +566,18 @@ propagator) for every voxel. In practice, unfeasibly long acquisition time is
 required and perfect experimental conditions. Therefore, a discrete method
 called q-space imaging (QSI) in 1D~\citep{callaghan-eccles-etal:1988}
 and Diffusion  Spectrum Imaging (DSI)~\citep{wedeen2005mapping} has been used (see section
-\ref{dsi}).  
+\ref{dsi}).
 DSI needs long acquisition time although recent techniques based on
 Compressed Sensing
 ideas~\citep{menzel-tan-etal:11,bilgic2012accelerated,gramfort-etal-media:13},
-and multi-slice imaging~\citep{Setsompop2012569} have 
+and multi-slice imaging~\citep{Setsompop2012569} have
 considerably accelerated the DSI acquisition. An alternative is to
 work on reconstructing only an angular projection of the 3D PDF. This
 often called the orientation distribution function (ODF). Another
 alternative is to make assumptions about the distribution of the PDF
-such as a Gaussian assumption, which lead to  
+such as a Gaussian assumption, which lead to
 the popular Diffusion Tensor Imaging (DTI)
-technique~\citep{basser-mattiello-etal:94}.  
+technique~\citep{basser-mattiello-etal:94}.
 
 
 \subsection{Diffusion Tensor Imaging in Dipy}\label{dti}
@@ -594,15 +600,15 @@ DTI was first proposed by Basser and colleagues
 demonstrating the utility of dMRI in characterizing properties  of
 white matter tissue. The model relies on the assumption that diffusion is a
 Gaussian process, which can be captured by 6 parameters, describing
-the variance and covariance of 
+the variance and covariance of
 the Gaussian diffusion along the three primary axes. From these
-parameters, several useful measures 
+parameters, several useful measures
 can be derived: the primary diffusion direction is the primary eigen-value of
 the tensor, $\lambda_{1}$ and it is the direction in which variance in the
 diffusion distribution is largest. In some places in the brain (e.g. in the
 corpus callosum, the large commissural fiber bundle connecting left
 and right hemispheres), this corresponds to the
-direction of the white 
+direction of the white
 matter fibers in the voxel and can be used for streamline tracking
 \citep{conturo-lori-etal:99, Mori1999, Basser2000}. Other univariate measures
 are estimated from the parameters of the model to assess the biophysical
@@ -627,17 +633,17 @@ loss of nerve fiber tissue also results in a decrease in FA \citep{Beaulieu1996,
   Beaulieu2002}. As a consequence of these studies, researchers now routinely
 refer to FA as a measure of \emph{"tissue integrity"}. However, we
 strongly warn against this usage, because it is easy to show that
-although the density of the 
+although the density of the
 tissue and the density of the myelin wrapping the axons in the voxel may affect
 both MD and FA, changes in other factors, such as the distribution of
 directions of crossing of fiber populations through the voxel may also affect
 these measures
 \citep{Basser1996,wandell-yeatman:13,jones-etal:13}. Therefore,
-interpretation 
+interpretation
 of group differences in FA, or longitudinal changes in FA over time should be
 carefully handled and compared to the results from other modeling techniques,
 that better account for the distribution of fiber orientations in the voxel
-(see below). 
+(see below).
 
 That said, the use of DT-based univariate statistics is very popular among
 users of dMRI and also quite useful. That is, variance in a variety of
@@ -678,7 +684,7 @@ fa = fractional_anisotropy(ten_fit.evals)
 \end{python}
 It is common to represent the primary diffusion direction using an RGB
 representation and create a DEC map \citep{pierpaoli-jezzard-etal:96}
-(see Fig.~\ref{Fig:ten_csa_csd}): 
+(see Fig.~\ref{Fig:ten_csa_csd}):
 \begin{python}
 from dipy.reconst.dti import color_fa
 cfa = color_fa(fa, tenfit.evecs)
@@ -690,9 +696,9 @@ non-linear least-squares, ordinary least-squares and weighted least-squares
 fitting \citep{chung-lu-etal:06} as well as Riemanian modeling-based
 techniques that assure that the estimated tensor is positive definite
 \citep{lenglet-rousson-etal:jmiv,arsigny-fillard-etal:06}. In
-addition, there is ongoing research on  
+addition, there is ongoing research on
 methods to robustly fit the tensor model, in the face of noisy data
-\citep{Chang2005, Chang2012}. For this purpose, an implementation of a robust 
+\citep{Chang2005, Chang2012}. For this purpose, an implementation of a robust
 tensor fitting algorithm (RESTORE) is also available in Dipy.
 
 The second is that many more univariate measures have been implemented. Not
@@ -721,11 +727,11 @@ complex signal $S$ with its module $|S|$ in Eq.~\ref{eq:fourier} and apply the
 Fourier transform:
 \begin{eqnarray}
 P(\mathbf{r}) & = &
-S_{0}^{-1}\int|S(\mathbf{q})|\exp(-i2\pi\mathbf{q}\cdot\mathbf{r})d\mathbf{q}\label{eq:P_modulus}  
+S_{0}^{-1}\int|S(\mathbf{q})|\exp(-i2\pi\mathbf{q}\cdot\mathbf{r})d\mathbf{q}\label{eq:P_modulus}
 \end{eqnarray}
 In DSI this triple-integral is approximated in a discrete way and the
 PDF P comes out for every single voxel as a 3D array. We can obtain
-$P$ using: 
+$P$ using:
 \begin{python}
 dsi_fit = dsi_model.fit(data)
 dsi_pdf = dsi_fit.pdf()
@@ -762,10 +768,10 @@ dsid_model = DiffusionSpectrumDeconvModel(gtab)
 dsid_fit = dsid_model.fit(data)
 \end{python}
 
-In Fig.~\ref{Fig:pdf} we show noiseless volumetric renderings of the PDFs of 
-a simulation of a $60\,^{\circ}$ crossing with the two different methods. It 
+In Fig.~\ref{Fig:pdf} we show noiseless volumetric renderings of the PDFs of
+a simulation of a $60\,^{\circ}$ crossing with the two different methods. It
 is evident that the LR deconvolution reconstruction better represents the
-underlying structure. 
+underlying structure.
 
 Since we are mainly interested in the angular structure of the underlying
 tissue, we further simplify the data by taking the weighted radial summation of
@@ -800,25 +806,24 @@ advantage of GQI is that it is much faster to calculate than DSI or DSID.
 \caption{Volumetric rendering of the diffusion propagator of a $60\,^{\circ}$ crossing with standard DSI(left) and DSI with deconvolution(right). \label{Fig:pdf}}
 \end{figure}
 
-
 \subsection{Q-ball Imaging}
 To reduce the acquisition requirements of DSI, several techniques
 have been proposed to compute the ODF from Eq. \label{eq:ODF_DSI}
 using only a single b-value dMRI acquisition, often called
 \emph{single-shell} high angular resolution diffusion imaging (HARDI)
-\citep{tuch-reese-etal:02,descoteaux-deriche-etal:11}. 
+\citep{tuch-reese-etal:02,descoteaux-deriche-etal:11}.
 Spherical harmonics (SH) are mathematical functions that can be used to
 construct an orthonormal basis for a function on the sphere. In practice, these
 can be used to approximate any spherical function (such as the ODF) up to a
 highest frequency (SH order). Due to their practical mathematical properties,
 there have been several cases of using spherical harmonics to describe
 the apparent diffusion coefficient (ADC) computed from HARDI, starting from the
-work of \citet{Frank2001, Frank2002, alexander-barker-etal:02} and 
+work of \citet{Frank2001, Frank2002, alexander-barker-etal:02} and
 \citet{tuch-reese-etal:02}. Then, Tuch showed that the Funk Radon Transform
 (FRT), used in a method he called \emph{q-ball imaging} (QBI),
 reconstructs a smoothed version the ODF directly from a
-\emph{single-shell} dMRI acquisition. This q-ball ODF $\psi_{QBI}$ can 
-be obtained analytically from a 
+\emph{single-shell} dMRI acquisition. This q-ball ODF $\psi_{QBI}$ can
+be obtained analytically from a
 SH estimation of the diffusion signal \citep{descoteaux-angelino-etal:07,
   hess-mukherjee-etal:06, anderson:05}:
 \begin{equation}\label{eq.qball}
@@ -832,8 +837,8 @@ original QBI solution, which performs the FRT numerically. It is
 important to note that these solutions are based on
 Eq. \label{eq:ODF_DSI}, without the $r^2$ term. Hence, these ODFs are
 not properly normalized by the solid angle term. Hence, Dipy proposes
-Constant Solid Angle analytical solution more recently proposed by 
-\citep{aganj-lenglet-etal:10,tristan-vega-westin-etal:09} 
+Constant Solid Angle analytical solution more recently proposed by
+\citep{aganj-lenglet-etal:10,tristan-vega-westin-etal:09}
 The SH of order $l$
 and phase $m$, $Y_{l}^{m}(\theta, \phi)$, arise from the angular solution to
 Laplace's equation in spherical coordinates and they form an orthonormal basis
@@ -848,7 +853,7 @@ and $16$ SH series have $R = 15, 28, 45$, and $153$ coefficients respectively.
 In Dipy we have implemented 3 different Q-ball methods in module
 module \texttt{dipy.reconst.shm}: a)
 \citep{descoteaux-angelino-etal:07}, b) \citep{aganj-lenglet-etal:10}
-and c) \citep{tristan-vega-westin-etal:09}. For 
+and c) \citep{tristan-vega-westin-etal:09}. For
 example (a) can be used in the following way:
 \begin{python}
 from dipy.reconst.shm import QballModel
@@ -861,7 +866,7 @@ qb_nodf = minmax_normalize(qb_odf)
 Important points here are that SH order is set to $6$ and the regularization
 parameter $0.006$, as suggested and optimized in
 \citep{descoteaux-angelino-etal:06c}. Furthermore, because the
-analytical ODF method produces more  
+analytical ODF method produces more
 rounded ODFs it is useful for visualization purposes to use \emph{min-max}
 normalization. The SH coefficients are accessible using the attribute
 \texttt{qb\_fit.shm\_coeff}. Methods (b) and (c) can be used in a very similar
@@ -885,9 +890,9 @@ term and therefore it generates more rounded ODFs that require normalization.
 QBI-based techniques reconstruct the \emph{diffusion
   ODF} (dODF). To improve the angular resolution of the reconstruction, spherical
 deconvolution (SD) techniques have been introduced and reconstruct what is
-called the \emph{fiber ODF} (fODF). 
+called the \emph{fiber ODF} (fODF).
 SD was first introduced by \citep{tournier-calamante-etal:04}. With
-this method, the signal measured on single spherical shell 
+this method, the signal measured on single spherical shell
 acquisitions can be expressed as the convolution over spherical coordinates of
 the response function with the fODF. The response
 function describes the signal intensity that would be measured as a function of
@@ -902,7 +907,7 @@ convolution operation then simply consists of one matrix multiplication per
 harmonic order l: $\mathbf{s}_l=\mathbf{R}\cdot\mathbf{f}_l$. The spherical
 deconvolution operation can be performed by simple matrix inversion. However,
 the spherical deconvolution problem is ill-posed and thus susceptible
-to noise \citep{tournier-calamante-etal:04}. 
+to noise \citep{tournier-calamante-etal:04}.
 
 Constrained super-resolved spherical deconvolution (CSD)
 \citep{tournier-calamante-etal:07} gives a robust solution to this problem by
@@ -911,7 +916,7 @@ applies a non-negativity constraint: fODF values that are smaller than 0 are
 non-physical and are precluded. The other is that CSD applies a sparsity
 constraint on the fODF - it assumes that only a few of the fODF values will be
 large. Applying these two constraints allows fitting the SH basis
-up to very high orders - in essence fitting more parameters than data allow. 
+up to very high orders - in essence fitting more parameters than data allow.
 This is known as \emph{super-resolution}. This super-resolved method
 can be accessed in Dipy using:
 \begin{python}
@@ -927,13 +932,13 @@ parameter \texttt{response} is a tuple with two parameters: a) the eigen-values
 of the tensor and b) the estimated average S0 signal for those voxels. The
 response function is usually estimated from the corpus callosum areas. For
 further information on how to iniate the CSD please read our examples in
-\texttt{dipy.org}. 
+\texttt{dipy.org}.
 
 Dipy also implements a second constrained spherical deconvolution method: The
 Spherical Deconvolution Transform (SDT)
-\citep{descoteaux-deriche-etal:09}, which is a sharpening 
+\citep{descoteaux-deriche-etal:09}, which is a sharpening
 operation that can transform the smooth diffusion ODF into a sharper
-fiber ODF. The method is 
+fiber ODF. The method is
 inspired by CSD \cite{tournier-calamante-etal:07} with, the main difference
 that the CSD is applied directly to the initial signal and the SDT directly to
 the ODF \citep{descoteaux:08,descoteaux-deriche-etal:09}.
@@ -959,7 +964,7 @@ sdt_model = SdtModel(gtab, ratio)
 Here the response function is provided as a scalar parameter, the ratio of the
 smallest eigenvalue over the largest eigenvalue. Both spherical deconvolution
 methods perform similarly as shown in
-\citep{descoteaux-deriche-etal:09,GaryfallidisISBI2013a}. 
+\citep{descoteaux-deriche-etal:09,GaryfallidisISBI2013a}.
 
 \begin{figure*}[!htb]
 \centerline{\includegraphics[width=180mm]{Figures/ten_csa_csd2.eps}}
@@ -968,7 +973,7 @@ methods perform similarly as shown in
   spherical deconvolution ODFs in of a region in the
 centrum semiovale showing crossings between the corpus callosum,
 corticospinal tract and the superior longitudinal
-fasciculus.\label{Fig:ten_csa_csd}}  
+fasciculus.\label{Fig:ten_csa_csd}}
 \end{figure*}
 
 In Fig.~\ref{Fig:ten_csa_csd} the ODFs of the \texttt{TensorModel},
@@ -986,7 +991,7 @@ ODFs, b) find the directions of the maxima in the ODFs which can be useful for
 tracking, c) discretize those directions on the unit sphere for efficiency, d)
 compress the ODFs as spherical harmonics to reduce memory usage and e)
 calculate many metrics simultaneously, e.g. generalized fractional anisotropy
-(GFA) \citep{tuch:04}, without the need of creating all ODFs at 
+(GFA) \citep{tuch:04}, without the need of creating all ODFs at
 once. \texttt{peaks\_from\_model} can be called as:
 \begin{python}
 from dipy.reconst.odf import peaks_from_model
@@ -1047,7 +1052,7 @@ that are implied by these principal diffusion directions \citep{Mori1999,
   conturo-lori-etal:99, basser-pajevic-etal:00} . However, it is
 now widely recognized that in regions of crossing fibers, the primary diffusion
 direction may not coincide with the direction of any of the local fiber
-populations. More modern algorithms (see below) take this into account.  
+populations. More modern algorithms (see below) take this into account.
 
 The other class of algorithms is probabilistic, in that it considers the local
 information in each voxel to represent a distribution of possible directions in
@@ -1115,15 +1120,15 @@ advantage that it allows us to seed from specific ROIs or from the gray matter
 results \citep{Cote2013tractometer}. The instance of EuDX returns back an
 iterator. In every call of the iterator a new streamline is returned. This
 technique allows to save directly streamlines in the disk without loading all
-streamlines in memory. In Fig.~\ref{Fig:pretty_streamlines} we show a human 
-brain streamlines, approximating the brain's white matter connections, generated 
-from EuDX. 
+streamlines in memory. In Fig.~\ref{Fig:pretty_streamlines} we show a human
+brain streamlines, approximating the brain's white matter connections, generated
+from EuDX.
 
 \begin{figure}
 \includegraphics[scale=0.75]{Figures/pretty_streamlines.eps}
 \centering{}
 \caption{An example of EuDX-based fiber tracking applied on a real
-  human brain dataset\label{Fig:pretty_streamlines}} 
+  human brain dataset\label{Fig:pretty_streamlines}}
 \end{figure}
 
 \subsection{Probabilistic}
@@ -1139,7 +1144,7 @@ streamlines (often more than one million) which is difficult to interact
 and interpret. As a solution to this problem Dipy implements a recent and
 efficient clustering algorithm for streamlines. This is called QuickBundles (QB)
 \citep{Garyfallidis_thesis,garyfallidis-etal:12} and it can be used to
-simplify large datasets in a couple of minutes. 
+simplify large datasets in a couple of minutes.
 When using QuickBundles we need first to instantiate the object with 3
 parameters. The first parameter is the set of initial streamlines to be
 clustered, the second is the distance threshold that defines the cluster size
@@ -1163,7 +1168,7 @@ specific cluster.
 It is often useful in dMRI to find from which ROIs a streamline is passing
 or even to count the number streamlines that go through another ROI,
 as recently done in brain \emph{connectomics}
-\citep{hagmann-leila-etal:08}. For this 
+\citep{hagmann-leila-etal:08}. For this
 purpose we created a multipurpose function called \texttt{track\_counts}.
 \begin{python}
 from dipy.tracking.vox2track import track_counts
@@ -1185,7 +1190,7 @@ the voxel.
 
 This function can be used to filter streamlines which go through specific masks,
 calculate track densities \citep{Calamante20101233} or used for
-connectivity analysis. 
+connectivity analysis.
 
 \subsection{Streamline metrics and statistics}
 
@@ -1210,14 +1215,14 @@ and torsion calculations along a streamline.
 
 \subsection{Visualization}
 Fig.~\ref{Fig:pdf},~\ref{Fig:ten_csa_csd},~\ref{Fig:pretty_streamlines}
-are generated by  
-our own visualization tools which can be used for most parts of the diffusion 
-analysis pipeline. We have developed a minimal, lightweight and up to the point 
-module which is based on the Visualization Toolkit (VTK)[REF] and we call 
-\texttt{fvtk}. The main idea is that a window can have one or more renderers. 
-A renderer can have none, one or more actors. Examples of actors are a sphere, 
-line, point or a complete set of streamlines. You can basically add actors in a 
-renderer and in that way you can visualize the forementioned objects e.g. 
+are generated by
+our own visualization tools which can be used for most parts of the diffusion
+analysis pipeline. We have developed a minimal, lightweight and up to the point
+module which is based on the Visualization Toolkit (VTK)[REF] and we call
+\texttt{fvtk}. The main idea is that a window can have one or more renderers.
+A renderer can have none, one or more actors. Examples of actors are a sphere,
+line, point or a complete set of streamlines. You can basically add actors in a
+renderer and in that way you can visualize the forementioned objects e.g.
 sphere, line etc. The windows can
 be created by either the \texttt{show} function which creates a visible window
 or the \texttt{record} function which creates a temporary window only for the
@@ -1301,7 +1306,7 @@ open source software (FOSS) practices.
 
 Ariel Rokem is funded by a National Research Service Award (NEI F32 EY022294).
 Eleftherios Garyfallidis if funded by NSERC-CREATE program in Medical
-Image Analysis and the Quebec Funds in Nature and Techologie (FQRNT). 
+Image Analysis and the Quebec Funds in Nature and Techologie (FQRNT).
 
 \section*{Disclosure/Conflict-of-Interest Statement}
 There are no conflicts of interest.
