Added new figure with dti metrics as Max suggested

--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -706,7 +706,13 @@ only can users compute FA, MD, DEC, but also other statistics that have been
 proposed in the literature, such as the diffusion linearity, planarity and
 sphericity \citep{westin:97}, as well as the tensor mode, tensor norm
 \cite{Ennis2006}, radial and axial diffusivity. All these tensor-based metrics
-are available under the \texttt{dipy.reconst.dti} module.
+are available under the \texttt{dipy.reconst.dti} module. In Fig.~\ref{Fig:dti_metrics} a 6 of the many available metrics are shown.
+
+\begin{figure}
+\includegraphics[scale=0.45]{Figures/dti_metrics.eps}
+\centering{}
+\caption{Diffusion Tensor based metrics created with Dipy. \label{Fig:dti_metrics}}
+\end{figure}
 
 \subsection{Diffusion Spectrum Imaging}\label{dsi}
 
